--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -88,6 +88,33 @@
           </ul>
           </li>
         </ul>
+        <ul class="navbar-nav lang-icon">
+          <li class="dropdown test-{{translateService.currentLang}}">
+            <ng-container *ngFor="let lang of translateService.getLangs()">
+
+              <a (click)="onOpenLangMenu()" *ngIf="lang === translateService.currentLang"
+               class="text-capitalize dropdown-toggle" href="#" id="navbarDropdownMenuLink"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <img [src]="onGetLangImage(lang)" width="16" class="mr-2"/>
+                <!-- {{onGetLangNames(translateService.currentLang)}} -->
+              </a>
+            </ng-container>
+
+
+            <ul *ngIf="isLangMenuOpen" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="margin: 3.25rem 0 0;">
+              <ng-container *ngFor="let lang of translateService.getLangs()">
+                <li class="submenu" *ngIf="lang != translateService.currentLang">
+                  <a (click)="useLanguage(lang)" class="text-capitalize dropdown-item" href="javascript:;">
+                    <img [src]="onGetLangImage(lang)" width="16" class="mr-2"/>
+                     {{onGetLangNames(lang)}}
+                  </a>
+                </li>
+              </ng-container>
+
+              <!-- <li class="submenu"> <a class="dropdown-item" href="#"><img src="assets/images/english.png" width="16" class="mr-2"/> English</a></li>
+              <li class="submenu"> <a class="dropdown-item" href="#"><img src="assets/images/español.png" width="16" class="mr-2"/> Español</a></li> -->
+            </ul>
+          </li>
+        </ul>
       </div>
       </div>
   </nav>
