Job issue fixed

--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -55,25 +55,25 @@
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'experience')" class="custom-control-input" id="select1">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'experience')" class="custom-control-input" id="select1">
                 <label class="custom-control-label" for="select1">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'sap_experience')" class="custom-control-input" id="select2">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'sap_experience')" class="custom-control-input" id="select2">
                 <label class="custom-control-label" for="select2">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'domain')" class="custom-control-input" id="select3">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'domain')" class="custom-control-input" id="select3">
                 <label class="custom-control-label" for="select3">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'hands_on_experience')" class="custom-control-input" id="select4">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'hands_on_experience')" class="custom-control-input" id="select4">
                 <label class="custom-control-label" for="select4">&nbsp;</label>
               </div>
             </li>
@@ -103,31 +103,31 @@
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'skills')" class="custom-control-input" id="select5">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'skills')" class="custom-control-input" id="select5">
                 <label class="custom-control-label" for="select5">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'programming_skills')" class="custom-control-input" id="select6">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'programming_skills')" class="custom-control-input" id="select6">
                 <label class="custom-control-label" for="select6">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'optinal_skills')" class="custom-control-input" id="select7">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'optinal_skills')" class="custom-control-input" id="select7">
                 <label class="custom-control-label" for="select7">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'certification')" class="custom-control-input" id="select8">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'certification')" class="custom-control-input" id="select8">
                 <label class="custom-control-label" for="select8">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'end_to_end_implementation')" class="custom-control-input" id="select9">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'end_to_end_implementation')" class="custom-control-input" id="select9">
                 <label class="custom-control-label" for="select9">&nbsp;</label>
               </div>
             </li>
@@ -161,25 +161,25 @@
           <ul class="list-group">
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'type')" class="custom-control-input" id="select10">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'type')" class="custom-control-input" id="select10">
                 <label class="custom-control-label" for="select10">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'remote')" class="custom-control-input" id="select11">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'remote')" class="custom-control-input" id="select11">
                 <label class="custom-control-label" for="select11">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'availability')" class="custom-control-input" id="select12">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'availability')" class="custom-control-input" id="select12">
                 <label class="custom-control-label" for="select12">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'travel_opportunity')" class="custom-control-input" id="select13">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'travel_opportunity')" class="custom-control-input" id="select13">
                 <label class="custom-control-label" for="select13">&nbsp;</label>
               </div>
             </li>
@@ -191,13 +191,13 @@
             </li> -->
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'work_authorization')" class="custom-control-input" id="select14">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'work_authorization')" class="custom-control-input" id="select14">
                 <label class="custom-control-label" for="select14">&nbsp;</label>
               </div>
             </li>
             <li class="list-group-item">
               <div class="custom-control custom-checkbox mr-sm-2">
-                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, 'visa_sponsorship')" class="custom-control-input" id="select15">
+                <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, 'visa_sponsorship')" class="custom-control-input" id="select15">
                 <label class="custom-control-label" for="select15">&nbsp;</label>
               </div>
             </li>
@@ -223,7 +223,7 @@
               <li *ngFor="let extra_criteria of childForm?.value?.jobPrev?.extra_criteria; let i = index"
                class="list-group-item">
                 <div class="custom-control custom-checkbox mr-sm-2">
-                  <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event, extra_criteria.title)" class="custom-control-input" id="select_extra_{{i}}">
+                  <input type="checkbox" checked (change)="onAddOrRemoveMustMatch($event?.target?.checked, extra_criteria.title)" class="custom-control-input" id="select_extra_{{i}}">
                   <label class="custom-control-label" for="select_extra_{{i}}">&nbsp;</label>
                 </div>
               </li>
