--- a/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-layout/post-job-layout.component.html
@@ -47,6 +47,7 @@
 
 
           <app-job-preview
+          [postedJobsDetails]="postedJobsDetails"
           (postJob)="postJob()"
           [postJobForm]="postJobForm"
           *ngIf="isOpenedJobPreviewModal"
