Job Delete change completed and New changes done

--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -12,7 +12,7 @@
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
         <label>{{"postJob.jobType" | translate}}</label>
-        <select appMarkAsterisk formControlName="type" class="form-control" name="job-type">
+        <select (change)="onChangeJobType($event?.target?.value)" appMarkAsterisk formControlName="type" class="form-control" name="job-type">
           <option [value]="''">Select</option>
           <option *ngFor="let title of sharedService.onGetJobType(); let i = index" [value]="i">
             {{title}}
@@ -29,6 +29,13 @@
         </select>
       </div>
       <app-control-messages [control]="f['type']"></app-control-messages>
+    </div>
+    <div class="col-lg-4 col-md-6" *ngIf="isContractDuration || childForm?.value?.jobInfo?.type == '6'">
+      <div class=" form-group">
+        <label>Duration<small>(in months)</small></label>
+        <input appMarkAsterisk numbersOnly formControlName="contract_duration" type="text" class="form-control" placeholder="Ex: 6 months">
+        <app-control-messages [control]="f['contract_duration']"></app-control-messages>
+      </div>
     </div>
     <div class="col-lg-4 col-md-6 d-flex">
       <div class=" form-group w-50">
