--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -1,7 +1,10 @@
 <section class="sub-header">
   <div class="container">
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-5 d-flex align-items-center">
+        <button [routerLink]="['/employer/dashboard']" type="button" class="btn btn-outline-green btn-sm mr-1">
+          <i class="fas fa-arrow-left"></i>
+        </button>
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">{{"dashboard.postJobDetailView" | translate}}</li>
         </ol>
@@ -43,7 +46,7 @@
                     <h6>
                       {{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
                       {{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
-                      {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}}
+                      <!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
                       {{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
                     </h6>
                   </div>
@@ -79,7 +82,7 @@
           <div class="col-lg-12 border-top pt-3">	</div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class=" list-group-item text-capitalize">{{"dashboard.knowledgeOn" | translate }}</li>
+              <li class=" list-group-item text-capitalize lg-mh-40">{{"dashboard.knowledgeOn" | translate }}</li>
               <li class=" list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
               <li class=" list-group-item text-capitalize">{{"postJob.niceToHave" | translate }}</li>
               <li class=" list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
@@ -87,7 +90,7 @@
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class=" list-group-item text-uppercase">
+              <li class=" list-group-item text-uppercase lg-mh-40">
                 <p class="m-0 w-100 float-left" *ngFor="let item of postedJobsDetails?.skills">
                   <span class="text-wrap-custom float-left">{{item ? onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
                 </p>
