Text editor added and latlang issue fixed

--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -180,6 +180,7 @@
 </section>
 
 <app-job-description
+[isRichTextEnabled]="true"
 [description]="postedJobsDetails?.description"
 [toggleJDModal]="isOpenedJDModal"
 *ngIf="isOpenedJDModal"
