--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -246,7 +246,7 @@
 
         <div class="col-lg-12">
           <h6>{{"postJob.jobDescription" | translate}}</h6>
-          <p>{{postJobForm?.value?.jobInfo?.description}}</p>
+          <p [innerHTML]="postJobForm?.value?.jobInfo?.description"></p>
         </div>
       </div>
     </div>
