--- a/frontend/src/app/shared/component/modal/job-description/job-description.component.html
+++ b/frontend/src/app/shared/component/modal/job-description/job-description.component.html
@@ -6,7 +6,8 @@
     </button>
     </div>
     <div class="modal-body text-justify">
-      <p>{{description ? description : '--'}}</p>
+      <p *ngIf="!isRichTextEnabled">{{description ? description : '--'}}</p>
+      <p *ngIf="isRichTextEnabled" [innerHTML]="description"></p>
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
