--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -41,7 +41,7 @@
                 <td>
                   {{item?.city ? item?.city + ', ' : ''}}
                   {{item?.state ? item?.state + ', ' : ''}}
-                  {{item?.zipcode ? item?.zipcode + ', ' : ''}}
+                  <!-- {{item?.zipcode ? item?.zipcode + ', ' : ''}} -->
                   {{item?.country ? item?.country : ''}}
                 </td>
                 <td>{{item.created_at ? (item.created_at | date: "MMM dd, y") : '-'}}</td>
